--- a/wercker.yml
+++ b/wercker.yml
@@ -5,6 +5,8 @@ build:
         version: "0.17"
 deploy:
   steps:
+    - install-packages:
+        packages: git ssh-client
     - lukevivier/gh-pages@0.2.1:
         token: $GIT_TOKEN
         domain: canigo.ctti.gencat.cat
