Patch per bug #1552764
https://bugs.launchpad.net/ubuntu/+source/java-common/+bug/1552764

--- a/static/devenv/STS.ini
+++ b/static/devenv/STS.ini
@@ -13,6 +13,8 @@ org.eclipse.platform
 --launcher.defaultAction
 openFile
 --launcher.appendVmargs
+--launcher.GTK_version
+2
 -vmargs
 -Djava.library.path=/usr/lib/x86_64-linux-gnu/jni
 -Dosgi.requiredJavaVersion=1.7
