--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Arquitectura CTTI. Generalitat de Catalunya"
 contentDir = "content"
 layoutDir = "layouts"
 publishDir = "public"
-buildDrafts = false
+buildDrafts = true
 baseURL = "http://canigo.ctti.gencat.cat"
 canonifyURLs = false
 disqusShortname = "arquitectura-ctti"
