Hugo plural section titles
https://discourse.gohugo.io/t/how-can-i-stop-section-title-from-showing-up-as-plural/994/3

--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,7 @@ buildDrafts = true
 baseURL = "http://canigo.ctti.gencat.cat"
 canonifyURLs = false
 disqusShortname = "arquitectura-ctti"
+pluralizelisttitles = false
 
 Paginate = 10
 
