--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ contentDir = "content"
 layoutDir = "layouts"
 publishDir = "public"
 buildDrafts = true
-baseURL = "http://canigo.ctti.gencat.cat"
+baseURL = "https://canigo.ctti.gencat.cat"
 canonifyURLs = false
 disqusShortname = "arquitectura-ctti"
 pluralizelisttitles = false
