--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ Paginate = 10
 	noticieshome = 10
 	destacatshome = 4
 	google_analytics_id = "UA-59408075-1"
-	titol = "Arquitectura CTTI"
+	titol = "Centre de Telecomunicacions i Tecnologies de la Informació"
 	blog_section = "blog"
 
 [taxonomies]
