Canvi de títol del comunicat (arrel reunió repàs comunicat del 28/06/2018.

--- a/data/parametres_comunicat.toml
+++ b/data/parametres_comunicat.toml
@@ -1,4 +1,4 @@
-Titol       = "Comunicats Centre de Suport Canigó"
+Titol       = "Comunicats Arquitectura"
 Subtitol    = "Frameworks i Solucions de Arquitectura"
 Departament = "Centre de Telecomunicacions i Tecnologies de la Informació"
 
