Fixed typo in Comunicat's title (de Arquitectura → d'Arquitectura)

--- a/data/parametres_comunicat.toml
+++ b/data/parametres_comunicat.toml
@@ -1,5 +1,5 @@
 Titol       = "Comunicats Arquitectura"
-Subtitol    = "Frameworks i Solucions de Arquitectura"
+Subtitol    = "Frameworks i Solucions d'Arquitectura"
 Departament = "Centre de Telecomunicacions i Tecnologies de la Informació"
 
 [mesos]
